ci: 🚀 배포 환경 변수 설정 수정
➕ main 브랜치에 배포 환경 프로필(prod) 변수 설정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -101,9 +101,14 @@ jobs:
           if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
             echo "TARGET_ENV=${{ inputs.target_env }}" >> $GITHUB_ENV
             echo "LOG_LEVEL=${{ inputs.log_level }}" >> $GITHUB_ENV
+          
+          elif [ "${{ github.ref }}" == "refs/heads/main" ]; then
+            echo "TARGET_ENV=prod" >> $GITHUB_ENV
+            echo "LOG_LEVEL=INFO" >> $GITHUB_ENV
+          
           else
             echo "TARGET_ENV=dev" >> $GITHUB_ENV
-            echo "LOG_LEVEL=INFO" >> $GITHUB_ENV
+            echo "LOG_LEVEL=DEBUG" >> $GITHUB_ENV
           fi
 
       - name: Configure AWS credentials
