--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,7 @@ on:
 permissions:
   contents: read
   checks: write
+  pull-requests: write
 
 jobs:
   build:
@@ -79,31 +80,19 @@ jobs:
         working-directory: ${{ matrix.work-dir }}
         run: ./gradlew jacocoTestReport -x test --no-daemon --info
 
-      - name: Debug and Copy Report
-        if: ${{ always() && (inputs.debug_mode == true || inputs.skip_tests == false) }}
-        working-directory: ${{ matrix.work-dir }}
-        run: |
-          ls -R build/reports/jacoco/test
-          cp build/reports/jacoco/test/jacocoTestReport.xml coverage.xml
-
-      - name: Generate Code Coverage Summary
-        if: ${{ hashFiles('coverage.xml') != '' }}
-        uses: irongut/CodeCoverageSummary@v1.3.0
+      - name: Publish JaCoCo Report
+        if: ${{ github.event_name == 'push' || github.event_name == 'pull_request' || inputs.skip_tests == false }}
+        uses: madrapps/jacoco-report@v1.7.2
         with:
-          filename: coverage.xml
-          badge: true
-          fail_below_min: false
-          format: markdown
-          hide_branch_rate: false
-          hide_complexity: true
-          indicators: true
-          output: both
-          thresholds: '60 80'
-
-      - name: Add Coverage to Job Summary
-        if: ${{ hashFiles('code-coverage-results.md') != '' }}
-        run: |
-          cat code-coverage-results.md >> $GITHUB_STEP_SUMMARY
+          paths: ${{ github.workspace }}/build/reports/jacoco/test/jacocoTestReport.xml
+          token: ${{ secrets.GITHUB_TOKEN }}
+          min-coverage-overall: 60
+          min-coverage-changed-files: 80
+          title: Code Coverage Report
+          update-comment: true
+          skip-if-no-changes: false
+          pass-emoji: ':green_circle:'
+          fail-emoji: ':red_circle:'
 
       - name: Upload JaCoCo HTML Report
         if: ${{ hashFiles('build/reports/jacoco/test/html/index.html') != '' }}
