config: 🔧 Ollama 개발 환경 설정 및 모델 초기화
- `ollama` 서비스 `docker-compose.dev.yml`에 추가
- GPU 자원 할당 및 데이터 볼륨 설정 적용
- `ollama-init` 서비스 추가 및 `nomic-embed-text` 모델 초기화
- 로컬 개발 환경에서 임베딩 모델 사용 환경 제공

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -84,6 +84,50 @@ services:
         max-file: "3"
         compress: "true"
 
+  ollama:
+    image: ollama/ollama:0.13.5
+    container_name: demo-dev-ollama
+    restart: always
+    networks:
+      - demo-dev-network
+    environment:
+      TZ: Asia/Seoul
+    ports:
+      - 11434:11434
+    volumes:
+      - ./docker/ollama/data:/root/.ollama
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [ gpu ]
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+        compress: "true"
+
+  ollama-init:
+    image: ollama/ollama:0.13.5
+    container_name: demo-dev-ollama-init
+    networks:
+      - demo-dev-network
+    environment:
+      OLLAMA_HOST: ollama:11434
+    depends_on:
+      - ollama
+    entrypoint: /bin/sh
+    command:
+      - "-c"
+      - |
+        until ollama list > /dev/null 2>&1; do
+          sleep 2
+        done
+        ollama pull nomic-embed-text:latest
+
 networks:
   demo-dev-network:
     driver: bridge
