deps: ⬆️ Testcontainers 의존성 추가
- Testcontainers 관련 의존성 추가
- Core, JUnit Jupiter, MySQL JDBC 모듈 포함
- 통합 테스트 환경 구축 및 DB 테스트 지원 목적
- Testcontainers 버전 정보 변수 분리

--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ def autoParamsVersion = '11.3.1'
 def fixtureMonkeyVersion = '1.1.15'
 def datafakerVersion = '2.5.1'
 def jqwikVersion = '1.9.3'
+def testcontainersVersion = '1.21.3'
 def embeddedRedisVersion = '1.4.3'
 
 dependencies {
@@ -132,6 +133,13 @@ dependencies {
     testImplementation "net.jqwik:jqwik-time:$jqwikVersion"
     // Jqwik Testing
     testImplementation "net.jqwik:jqwik-testing:$jqwikVersion"
+
+    // Testcontainers Core
+    testImplementation "org.testcontainers:testcontainers:$testcontainersVersion"
+    // Testcontainers :: JUnit Jupiter Extension
+    testImplementation "org.testcontainers:junit-jupiter:$testcontainersVersion"
+    // Testcontainers :: JDBC :: MySQL
+    testImplementation "org.testcontainers:mysql:$testcontainersVersion"
 
     // Embedded Redis
     testImplementation "com.github.codemonstur:embedded-redis:$embeddedRedisVersion"
