chore: 🔨 초기화 로직 및 모델 저장 경로 설정 변경
- 모델 저장 경로 지정을 위한 OLLAMA_MODELS 환경 변수 추가
- 초기화 이미지를 curl로 변경 및 API 기반 모델 다운로드 로직 적용
- CLI 명령어 대신 curl을 사용하여 초기화 과정의 의존성 최적화

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -91,6 +91,7 @@ services:
     networks:
       - demo-dev-network
     environment:
+      OLLAMA_MODELS: /root/.ollama/models
       TZ: Asia/Seoul
     ports:
       - 11434:11434
@@ -111,22 +112,22 @@ services:
         compress: "true"
 
   ollama-init:
-    image: ollama/ollama:0.13.5
+    image: curlimages/curl:8.17.0
     container_name: demo-dev-ollama-init
     networks:
       - demo-dev-network
-    environment:
-      OLLAMA_HOST: ollama:11434
     depends_on:
       - ollama
     entrypoint: /bin/sh
     command:
       - "-c"
       - |
-        until ollama list > /dev/null 2>&1; do
+        until curl -s http://ollama:11434/api/tags > /dev/null; do
           sleep 2
         done
-        ollama pull nomic-embed-text:latest
+        curl -X POST http://ollama:11434/api/pull \
+             -H 'Content-Type: application/json' \
+             -d '{ "name": "nomic-embed-text:latest", "stream": false }'
 
 networks:
   demo-dev-network:
